# redshield-architect

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.md  README.md  SECURITY.md
docs/: AI_AGENT_INTERACTION_SURFACE.md  ARCHIMATE_ALIGNMENT.md  ARCHIMATE_MAPPING_MATRIX.md  ASSET_REFERENCES.md  EA_SCHEMA_UI_BOUNDARY.md  EDITIONS.md  IMPORT_EXPORT_MATRIX.md  IMPORT_EXPORT_PRIORITY.md  MODEL_PACKAGE.md  PORTFOLIO_LIFECYCLE.md  PORTFOLIO_ROADMAP_PRESENTATION.md  PORTFOLIO_SAVED_VIEWS.md  PORTFOLIO_SUBTYPE_PROFILES.md  PORTFOLIO_VIEWS.md  PRODUCT_BRIEF.md  RENDER_EXPORT_BEHAVIOR.md  REQUIREMENTS.md  ROADMAP.md
docs/architecture/: OVERVIEW.md
docs/research/: COMPARABLE_TOOLS.md
docs/security/: THREAT_MODEL.md
packaging/fedora/: README.md  com.redshield.architect.desktop  (+1 more)
schemas/: diagrams.schema.json  elements.schema.json  imports.schema.json  manifest.schema.json  portfolio-saved-views.schema.json  portfolio.schema.json  proposal.schema.json  relationships.schema.json  render-profile.schema.json  requirements.schema.json  roadmap-presentations.schema.json  trace.schema.json
scripts/: build_fedora_rpm.sh  build_tauri_appimage.sh  prepare_fedora_rpm_review_candidate.sh  smoke_fedora_rpm_lifecycle.sh  validate_fedora_rpm_review_candidate.sh
src/: lib.rs  main.rs
tests/: schema_conformance.rs
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  styles.css  (+2 more)
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/metainfo/: com.redshield.architect.metainfo.xml
web/src-tauri/src/: main.rs
(+14 files in other folders)
